# pvox

./: .gitignore  .pre-commit-config.yaml  .yamlfix.toml  AGENTS.md  Cargo.toml  README.md  compose.yaml  justfile  opencode.json
.agents/skills/: proxmox-ratatui.md  rust-ci.md  testing-patterns.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  renovate.json
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
schema/: config.schema.json
scripts/: setup-proxmox.py
src/: app.rs  client.rs  config.rs  event.rs  lib.rs  main.rs  theme.rs  tui.rs  ui.rs
src/api/: client.rs  error.rs  mod.rs  types.rs
src/app/: command.rs  input.rs  mod.rs  modal.rs  sparkline.rs
src/ui/: dialog.rs  format.rs  header.rs  help.rs  layout.rs  mod.rs  overlays.rs  table.rs
