[package]
name = "pvox"
version = "0.0.2"
edition = "2024"
description = "A k9s-like terminal UI for Proxmox VE"
license = "Unlicense"
authors = ["Your Name <you@example.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "native-tls",
  "charset",
  "http2",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = { version = "0.46", default-features = false }
proxmox-api = "0.2.0"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { version = "0.29", features = ["crossterm", "palette"] }
clap = { version = "4", features = ["derive", "cargo", "color"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
